Fix graph going out of view unscrollable

--- a/client/style.css
+++ b/client/style.css
@@ -368,7 +368,7 @@ body {
 }
 
 #graph {
-    margin: 0 auto;
+    margin: auto auto;
 }
 
 main {
